# definiciones/swagger.yaml
@@ -6,7 +6,7 @@ info:
   version: 1.0.0
   title: Agenda
   contact: {}
-host: localhost:80
+host: localhost
 basePath: "/v1"
 tags:
 - name: Calendars
@@ -17,10 +17,11 @@ tags:
   description: Citas en una agenda determinada
 - name: BlockSchedules
   description: Bloqueos de horarios
+- name: Application
+  description: Aplicaciones
 schemes:
 - http
 paths:
-  "/appointment": {}
   "/appointment/assists/{appointment_id}":
     put:
       tags:
@@ -66,6 +67,53 @@ paths:
           description: Error 500
           schema:
             "$ref": "#/definitions/ErrorResponse"
+  "/appointment/{appointment_id}":
+    put:
+      tags:
+      - Appointments
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: appointment_id
+        in: path
+        description: ID de la cita a modificar
+        required: true
+        type: integer
+        format: int32
+      - name: appkey
+        in: header
+        description: App key
+        required: true
+        type: string
+      - name: domain
+        in: header
+        description: Dominio de la aplicación
+        required: true
+        type: string
+      - in: body
+        name: body
+        required: false
+        schema:
+          "$ref": "#/definitions/InputAppointmentReserve"
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/SuccessResponse"
+        '400':
+          description: Error 400
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '406':
+          description: Error 406
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '500':
+          description: Error 500
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
   "/appointments/available/{calendar_id}":
     get:
       tags:
@@ -85,7 +133,7 @@ paths:
       - name: date
         in: query
         description: Fecha a obtener disponibildad de cita (AAAA-MM-DD)
-        required: true
+        required: false
         type: string
       - name: appkey
         in: header
@@ -292,15 +340,15 @@ paths:
           schema:
             "$ref": "#/definitions/OutputAppointment"
         '400':
-          description: Error 400
+          description: Status 400
           schema:
             "$ref": "#/definitions/ErrorResponse"
         '404':
-          description: Error 404
+          description: Status 404
           schema:
             "$ref": "#/definitions/ErrorResponse"
         '500':
-          description: Error 500
+          description: Status 500
           schema:
             "$ref": "#/definitions/ErrorResponse"
   "/appointments/listByOwner/{owner_id}":
@@ -726,19 +774,19 @@ paths:
         type: string
       responses:
         '200':
-          description: Success
+          description: Status 200
           schema:
             "$ref": "#/definitions/OutputCalendar"
         '400':
-          description: Error 400
+          description: Status 400
           schema:
             "$ref": "#/definitions/ErrorResponse"
         '404':
-          description: Error 404
+          description: Status 404
           schema:
             "$ref": "#/definitions/ErrorResponse"
         '500':
-          description: Error 500
+          description: Status 500
           schema:
             "$ref": "#/definitions/ErrorResponse"
     put:
@@ -900,6 +948,151 @@ paths:
           description: Error 500
           schema:
             "$ref": "#/definitions/ErrorResponse"
+  "/apps":
+    get:
+      tags:
+      - Application
+      description: Lista las aplicaciones
+      operationId: getApplications
+      consumes: []
+      produces:
+      - application/json
+      parameters:
+      - name: appkey
+        in: query
+        description: App key
+        required: false
+        type: string
+      - name: domain
+        in: query
+        description: Dominios de una App
+        required: false
+        type: string
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/OutputApplications"
+        '400':
+          description: Error 400
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '404':
+          description: Error 404
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '500':
+          description: Error 500
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+    post:
+      tags:
+      - Application
+      description: Crea aplicaciones
+      operationId: postApplications
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: body
+        required: false
+        schema:
+          "$ref": "#/definitions/InputCreateApplication"
+      responses:
+        '201':
+          description: Success
+          schema:
+            "$ref": "#/definitions/SuccessResponse"
+        '400':
+          description: Error 400
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '500':
+          description: Error 500
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+    put:
+      tags:
+      - Application
+      summary: UpdateApplication
+      description: Actualiza una App
+      operationId: putApplication
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: appkey
+        in: query
+        description: App key
+        required: true
+        type: string
+      - name: domain
+        in: query
+        description: Domain de la App
+        required: true
+        type: string
+      - in: body
+        name: body
+        required: false
+        schema:
+          "$ref": "#/definitions/InputUpdateApplication"
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/SuccessResponse"
+        '400':
+          description: Error 400
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '500':
+          description: Error 500
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+  "/apps/changeStatus":
+    put:
+      tags:
+      - Application
+      summary: ChangeStatusApplication
+      description: Cambia el estado una App
+      operationId: putChangeApplication
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - name: appkey
+        in: query
+        description: App key
+        required: true
+        type: string
+      - name: domain
+        in: query
+        description: Domain de la App
+        required: true
+        type: string
+      - in: body
+        name: body
+        required: false
+        schema:
+          "$ref": "#/definitions/InputChangeApplication"
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/SuccessResponse"
+        '400':
+          description: Error 400
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+        '500':
+          description: Error 500
+          schema:
+            "$ref": "#/definitions/ErrorResponse"
+
 definitions:
   Appointment:
     type: object
@@ -937,6 +1130,7 @@ definitions:
     - applyer_email
     - applyer_name
     - appoinment_time
+    - appointment_id
     - available
     - owner_name
     - subject
@@ -951,6 +1145,10 @@ definitions:
       appoinment_time:
         type: string
         description: Horario de la cita
+      appointment_id:
+        type: integer
+        format: int32
+        description: ID de la cita
       available:
         type: string
         description: Reservada, disponible o bloqueada
@@ -1061,6 +1259,38 @@ definitions:
       name:
         type: string
         description: Nombre del día no laboral
+  Application:
+    type: object
+    required:
+    - appkey
+    - domain
+    - name
+    - contact_email
+    - from_email
+    - from_name
+    - status
+    properties:
+      appkey:
+        type: string
+        description: App key
+      domain:
+        type: string
+        description: Dominio de la App
+      name:
+        type: string
+        description: Nombre de la App
+      contact_email:
+        type: string
+        description: Email de contacto
+      from_email:
+        type: string
+        description: Email de notificación
+      from_name:
+        type: string
+        description: Nombre
+      status:
+        type: string
+        description: Estado de la App
   ErrorResponse:
     type: object
     required:
@@ -1250,6 +1480,59 @@ definitions:
       name:
         type: string
         description: Nombre del día no laboral
+  InputCreateApplication:
+    type: object
+    required:
+    - domain
+    - name
+    - contact_email
+    - from_email
+    - from_name
+    properties:
+      domain:
+        type: string
+        description: Dominio de la App
+      name:
+        type: string
+        description: Nombre de la App
+      contact_email:
+        type: string
+        description: Email de contacto
+      from_email:
+        type: string
+        description: Email de notificación
+      from_name:
+        type: string
+        description: Nombre
+  InputUpdateApplication:
+    type: object
+    required:
+    - name
+    - contact_email
+    - from_email
+    - from_name
+    properties:
+      name:
+        type: string
+        description: Nombre de la App
+      contact_email:
+        type: string
+        description: Email de contacto
+      from_email:
+        type: string
+        description: Email de notificación
+      from_name:
+        type: string
+        description: Nombre
+  InputChangeApplication:
+    type: object
+    required:
+    - status
+    properties:
+      status:
+        type: integer
+        format: int32
+        description: Estado de a App
   OutputAppointment:
     type: object
     required:
@@ -1322,6 +1605,18 @@ definitions:
         description: Listado de días no laborales
         items:
           "$ref": "#/definitions/DayOff"
+      response:
+        "$ref": "#/definitions/GenericResponse"
+  OutputApplications:
+    type: object
+    required:
+    - response
+    properties:
+      application:
+        type: array
+        description: Listado de aplicaciones
+        items:
+          "$ref": "#/definitions/Application"
       response:
         "$ref": "#/definitions/GenericResponse"
   SuccessResponse:
